plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'com.adarshr.test-logger' version '3.2.0'
    id 'jacoco'
}

group = 'edu.stanford.slac'
version = '1.0.0'
sourceCompatibility = '19'

springBoot {
    buildInfo()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-test',
            'org.springframework.boot:spring-boot-starter-web',
            'org.springframework.boot:spring-boot-starter-actuator',
            'io.micrometer:micrometer-registry-prometheus',
            'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2',
            'org.springdoc:springdoc-openapi-starter-webflux-ui:2.0.2',
            'javax.annotation:javax.annotation-api:1.3.2',
            'io.swagger.core.v3:swagger-annotations:2.2.8',
            'org.mapstruct:mapstruct:1.5.3.Final',
            'com.github.javafaker:javafaker:1.0.2',
            'com.fasterxml.jackson.core:jackson-databind',
            'org.springframework.kafka:spring-kafka:3.0.8',
            'net.coobird:thumbnailator:[0.4, 0.5)',
            'software.amazon.awssdk:s3:2.20.102'


    // MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // JSOUP
    implementation 'org.jsoup:jsoup:1.16.1'

    // mongock
    implementation  'io.mongock:mongock-bom:5.3.1',
                    'io.mongock:mongock-springboot-v3:5.3.1',
                    'io.mongock:mongodb-springdata-v4-driver:5.3.1'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'

    testImplementation 'org.springframework.boot:spring-boot-starter-test',
            'org.awaitility:awaitility:4.0.3',
            'org.apache.pdfbox:pdfbox:2.0.28'

}

tasks.named('test') {
    useJUnitPlatform()
}

jacoco {
    reportsDirectory = layout.buildDirectory.dir('coverage')
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    reports {
        xml.required = true
        csv.required = true
        html.required = true
    }
}

testlogger {
    theme 'standard'
    showExceptions true
    showStackTraces true
    showFullStackTraces false
    showCauses true
    slowThreshold 2000
    showSummary true
    showSimpleNames false
    showPassed true
    showSkipped true
    showFailed true
    showOnlySlow false
    showStandardStreams false
    showPassedStandardStreams true
    showSkippedStandardStreams true
    showFailedStandardStreams true
    logLevel 'lifecycle'
}
